Mon Feb  7 19:17:25 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Prefix all the types in omtypes.h with "om_".

Mon Feb  7 17:37:52 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added a test of boolean-only queries to apitest, which fails.

Mon Feb  7 15:56:43 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Improved exception hierarchy:

	  o Exceptions are all split between `OmLogicError' and
	    `OmRuntimeError'.
	    
	  o Plain `OmError' exceptions are no longer allowed.

	  o All exception classes are prefixed with `Om'.

Mon Feb  7 12:57:12 GMT 2000 Richard Boulton <richard.boulton@open.muscat.com>

	* Make get_eset()'s max_items parameter work.
          (Changed max_esize in OMExpand from a member to a parameter of
	  expand() )

	* Implemented add_database() correctly in OMEnquire: can now do
	  multi database stuff.

Mon Feb  7 12:53:33 GMT 2000  Chris Emerson <chris.emerson@open.muscat.com>

	* Added tests to apitest for maxitems parameters and null queries

Mon Jan 31 17:00:18 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* OMMatch stores query in a pointer rather than the historical
	  remnants of a stack.
	  OMEnquire updated accordingly.

	* OMEnquire deallocates RSet correctly.

	* querygui example compiles and works.

Fri Jan 28 16:44:49 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Fixed problems with assigning to a query (old query elements were
	  left in place.)  Implemented automatic merging of OR and AND nodes
	  into a single list of terms to be ORed or ANDed.

Fri Jan 28 15:53:53 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Added introspection methods to OMQuery.

Fri Jan 28 13:41:20 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Started Changelog

	* Previous state of code:

	  o An API for searching has just been created, but is undocumented,
	    will change in various ways in the coming weeks, and isn't quite